Fix broken style

--- a/static/less/layout.less
+++ b/static/less/layout.less
@@ -101,6 +101,16 @@ body {
     }
 }
 
+#search-view {
+    ul {
+        list-style: none;
+        margin-left: 0;
+    }
+    li {
+        .inline-block;
+    }
+}
+
 #search-options {
     position: absolute;
     top: 115px;
