--- a/static/less/polidic.mobile.less
+++ b/static/less/polidic.mobile.less
@@ -15,6 +15,16 @@ h1 {
     }
 }
 
+#search-view {
+    ul {
+        list-style: none;
+        margin-left: 0;
+    }
+    li {
+        .inline-block;
+    }
+}
+
 .itemlist ul {
     position: relative;
     margin: 0 5%;
